# fire

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  DEPLOYMENT.md  Dockerfile  EXTRACTOR_ANALYSIS.md  FHIR_R5_UPGRADE.md  GENERATION_STATUS.md  GENERATOR_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  catalog  docker-compose.dev.yml  docker-compose.yml  fhir.xml  fhirspec.dtd  fire.sh
.cargo/: config.toml
.sqlx/: query-028753068af0c80ab83ab058a2a9b19bf19bdecaf7e69faab17b88503198dda0.json  query-208679169b55b0d3b91929d365b2fc6b337b3cb92d022a24cd6691988d435318.json  query-2d8a8b554b5cdd225afcc8408f5eca80f9e696630bade4ec03085fe00cb9b8f7.json  query-2fead1735a0406b0c1ef223aa254332a18e09ea5dc8e2847dea8178cedfd1f8d.json  query-44921007d301d31d39181f757cc1e4a1c289b3f0141e76e3537be2293f41ddbb.json  query-55db0d6152b49a5b4dd6462ddd5bd4f9daf76f893ded13c3662fee2a97e34eab.json  query-5a761417ba77c12f2a2021ad8d0d691819c4408b990c9d22e29f945cad8ec618.json  query-75c643dfb4debf1d8c4a392ddc3a8d54d16becb4158f9dd045a79c9d155712c6.json  query-87ba7e9b9e839888e076cdf78a318f5efd3ae8d424517ec20649eba500c7e679.json  query-934e383911770d86702ed576e8054c5dc3f06b2dbc4b4dcf987ceb5ac7391cd5.json  query-9a493b90cc0b0ae255750fff5f6994b929a3867f01e62e0890c23e85a7d199df.json  query-cb7cd9e071e4b2e57f9e429c6ed976a27de8607136145767199cba536633f55a.json  query-d875ffc4e27463f132ea5c2d926ba2e0a53706cf84b5ad6d77a9170ffd233ddc.json  query-db04c110ad4c0c7ee9e2be5c6c023f7b0ba81534c7ebf7e9de2a3d42d7eed0f8.json  (+2 more)
codegen/: config.scm  (+8 more)
(+84 files in other folders)
